<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleInscrip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:text="@string/mon_appli_de_kouizine"
            android:textColor="#1A73E9"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adresse_e_mail"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/email"
            tools:ignore="TextFields,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/prenomEdit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/prenom" />

        <EditText
            android:id="@+id/nomEdit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/mdpEdit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/mot_de_passe" />

        <EditText
            android:id="@+id/confirmMdpEdit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/confirmer_le_mot_de_passe" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonInscri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/color_button"
            android:onClick="registerUser"
            android:text="@string/inscription"
            tools:ignore="NestedWeights" />
    </LinearLayout>

</LinearLayout>